build: prod environment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
+COMPOSE_PROJECT_NAME=inventory-management-api
+
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_ENV=prod
+APP_KEY=base64:0x9mmxQqZ7ZmOgDMMX8dqKA4q0tFthkFtzS51LdvhA4=
+APP_DEBUG=false
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,11 +23,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=postgres
 DB_PORT=5432
-DB_DATABASE=app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=1234
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -63,3 +65,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+OCTANE_SERVER=swoole
